# medway_api

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: lint_and_test.yaml
app/.github/workflows/: lint_and_test.yaml
app/core/: logging.py
app/docs/schemas/: exam.py  submission.py
app/exam/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/exam/migrations/: 0001_initial.py  0002_create_exams.py  0003_alter_examquestion_exam.py
app/medway_api/: settings.py  urls.py
app/question/: admin.py  models.py  serializers.py
app/question/migrations/: 0001_initial.py
app/student/: admin.py
app/submission/: models.py  serializers.py  tests.py  urls.py  views.py
app/submission/migrations/: 0001_initial.py
