[tool.poetry]
name = "medway-api"
version = "0.1.0"
description = ""
authors = ["Genilson Filho <genilson974@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^5.1.6"
djangorestframework = "^3.15.0"
psycopg2-binary = "^2.9.10"
drf-yasg = "^1.21.7"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select = ["I"]
exclude = ["migrations/*"]
